# roxy

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yaml
.github/: copilot-instructions.md
.github/workflows/: build-and-push.yml
benches/: request.rs  rules.rs
benches/common/: mod.rs
docs/: hudsucker-gaps.md  memory-tuning.md  rate-limiting.md  rules.md
loadtest/: run.sh
scripts/: generate-ca.sh
src/: error.rs  lib.rs  main.rs  util.rs
src/config/: mod.rs  reload.rs  types.rs
src/proxy/: authority.rs  bounded.rs  handler.rs  mod.rs
src/ratelimit/: credit.rs  limiter.rs  mod.rs
src/rules/: ast.rs  engine.rs  key.rs  mod.rs  parser.rs
